ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: title
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-arn: arn:aws:elasticloadbalancing:ap-northeast-2:490913547024:loadbalancer/app/GroomALb/6f22a3d7adea2ca3
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /auth
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  name: http
          - path: /common
            pathType: ImplementationSpecific
            backend:
              service:
                name: common-service
                port:
                  name: http
          - path: /user
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  name: http
          - path: /store
            pathType: ImplementationSpecific
            backend:
              service:
                name: store-service
                port:
                  name: http
          - path: /payment
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service
                port:
                  name: http
          - path: /ai
            pathType: ImplementationSpecific
            backend:
              service:
                name: ai-service
                port:
                  name: http

          - path: /order
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  name: http
